--- a/UI-Design/combined/createaccount.ui
+++ b/UI-Design/combined/createaccount.ui
@@ -15,35 +15,34 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog {
-    background-color: rgb(54, 54, 54);
+    background-color: #1D2228;
 }
-/* default lable */
 QLabel {
-    color: rgb(255, 0, 127);
+    color: #FB8122;
     font-size: 15pt;
 }
 QLabel#LoginLabel {
-    color: rgb(225, 225, 225);
+    color: #FB8122;
     font-size: 24pt;
 	font-weight: bold;
 }
-QLineEdit#EmailLineEdit, QLineEdit#PasswordLineEdit {
+QLineEdit, QComboBox {
     color: rgb(235, 235, 235);
 	background-color: #363636;
     font: 15pt &quot;Sans Serif&quot;;
 	border-style: solid;
 	border-width: 2px;
-	border-color: rgb(235, 235, 235);
+	border-color: #E1E2E2;
 }
-QLineEdit#EmailLineEdit:focus, QLineEdit#PasswordLineEdit:focus {
+QLineEdit:focus, QComboBox:focus {
 	background-color: rgb(214, 214, 214);
 	color: rgb(59, 59, 59);
 }
  QPushButton {
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #4B0082, stop: 1 #6B728E);
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #FB8122, stop: 1 #D48166);
     border-radius: 6px;
     padding: 5px;
-    color: white;
+    color: #1D2228;
     font-weight: bold;
 }
 QPushButton:hover {;
@@ -56,10 +55,10 @@ QPushButton:pressed {
 
 
  QPushButton#GetAccountPushButton {
-    background: #6E6D70;
+    background: #E1E2E2;
     border-radius: 4px;
   	border: none;
-    color: #DFDEDF;
+    color: #1D2228;
     font: 10pt &quot;Sans Serif&quot;;
 	box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5), 0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
 }
@@ -92,24 +91,24 @@ QPushButton#GetAccountPushButton:pressed {
     <string>Sign Up</string>
    </property>
   </widget>
-  <widget class="QLabel" name="EmailLabel">
+  <widget class="QLabel" name="UserNameLabel">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>113</x>
      <y>170</y>
-     <width>54</width>
-     <height>17</height>
+     <width>101</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Email</string>
+    <string>Username</string>
    </property>
   </widget>
   <widget class="QLabel" name="PasswordLabel">
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>220</y>
+     <y>270</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -118,7 +117,7 @@ QPushButton#GetAccountPushButton:pressed {
     <string>Password</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="EmailLineEdit">
+  <widget class="QLineEdit" name="UserNameLineEdit">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -132,33 +131,33 @@ QPushButton#GetAccountPushButton:pressed {
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>210</y>
+     <y>260</y>
      <width>191</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="SignUpPushButton">
+  <widget class="QPushButton" name="CreateAccountPushButton">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>340</y>
-     <width>111</width>
-     <height>31</height>
+     <x>240</x>
+     <y>370</y>
+     <width>191</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
    </property>
    <property name="text">
-    <string>Sign Up</string>
+    <string>Create Account</string>
    </property>
   </widget>
   <widget class="QLabel" name="ConfirmPasswordLabel">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>270</y>
+     <y>320</y>
      <width>171</width>
      <height>20</height>
     </rect>
@@ -171,7 +170,30 @@ QPushButton#GetAccountPushButton:pressed {
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>260</y>
+     <y>310</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="RoleLabel">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>220</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Role</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="RoleComboBox">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>210</y>
      <width>191</width>
      <height>31</height>
     </rect>
