--- a/UI-Design/combined/Maintenance-UI.ui
+++ b/UI-Design/combined/Maintenance-UI.ui
@@ -225,6 +225,7 @@ QTableView::item:hover {
            <widget class="QPushButton" name="pushButton_7">
             <property name="font">
              <font>
+              <family>Verdana</family>
               <pointsize>-1</pointsize>
               <bold>true</bold>
              </font>
@@ -447,6 +448,7 @@ QTableView::item:hover {
               <widget class="QLabel" name="title_label">
                <property name="font">
                 <font>
+                 <family>Cambria</family>
                  <pointsize>26</pointsize>
                  <italic>false</italic>
                  <bold>true</bold>
@@ -543,6 +545,7 @@ QTableView::item:hover {
                    </property>
                    <property name="font">
                     <font>
+                     <family>Candara</family>
                      <pointsize>14</pointsize>
                      <italic>false</italic>
                      <bold>true</bold>
@@ -1174,23 +1177,6 @@ QTableView::item:hover {
                     <property name="frameShadow">
                      <enum>QFrame::Raised</enum>
                     </property>
-                    <widget class="QLineEdit" name="disposition_lineEdit">
-                     <property name="geometry">
-                      <rect>
-                       <x>0</x>
-                       <y>140</y>
-                       <width>91</width>
-                       <height>31</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">background-color: rgb(148, 177, 255);
-border: 1px solid #000000;
-border-radius: 10px;
-font: 12pt &quot;Verdana&quot;;
-color: rgb(66, 8, 36);</string>
-                     </property>
-                    </widget>
                     <widget class="QLineEdit" name="simulator_lineEdit">
                      <property name="geometry">
                       <rect>
@@ -1281,6 +1267,23 @@ color: rgb(66, 8, 36);</string>
                      <property name="geometry">
                       <rect>
                        <x>140</x>
+                       <y>140</y>
+                       <width>91</width>
+                       <height>31</height>
+                      </rect>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">background-color: rgb(148, 177, 255);
+border: 1px solid #000000;
+border-radius: 10px;
+font: 12pt &quot;Verdana&quot;;
+color: rgb(66, 8, 36);</string>
+                     </property>
+                    </widget>
+                    <widget class="QComboBox" name="disposition_comboBox">
+                     <property name="geometry">
+                      <rect>
+                       <x>0</x>
                        <y>140</y>
                        <width>91</width>
                        <height>31</height>
