--- a/UI-Design/Schedular-UI/Schedular.ui
+++ b/UI-Design/Schedular-UI/Schedular.ui
@@ -41,8 +41,11 @@ QPushButton#addNew {
      <height>281</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt;</string>
+   </property>
   </widget>
-  <widget class="QListWidget" name="listWidget">
+  <widget class="QListWidget" name="tasksListWidget">
    <property name="geometry">
     <rect>
      <x>510</x>
@@ -50,6 +53,9 @@ QPushButton#addNew {
      <width>321</width>
      <height>241</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="saveChanges">
