--- a/UI-Design/combined/login.ui
+++ b/UI-Design/combined/login.ui
@@ -94,14 +94,14 @@ QPushButton#GetAccountPushButton:pressed {
   <widget class="QLabel" name="UserNameLabel">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>63</x>
      <y>170</y>
-     <width>54</width>
-     <height>17</height>
+     <width>111</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Role</string>
+    <string>Username</string>
    </property>
   </widget>
   <widget class="QLabel" name="PasswordLabel">
