--- a/UI-Design/combined/createaccount.ui
+++ b/UI-Design/combined/createaccount.ui
@@ -54,7 +54,7 @@ QPushButton:pressed {
 }
 
 
- QPushButton#GetAccountPushButton {
+ QPushButton#ReturnLoginButton {
     background: #E1E2E2;
     border-radius: 4px;
   	border: none;
@@ -62,16 +62,16 @@ QPushButton:pressed {
     font: 10pt &quot;Sans Serif&quot;;
 	box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5), 0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
 }
-QPushButton#GetAccountPushButton:hover {
+QPushButton#ReturnLoginButton:hover {
 	box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
 	outline: 0;
     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #6B728E, stop: 1 #404258);
 }
-QLabel#GetAccountLabel {
+QLabel#ReturnLoginLabel {
 	font: 10pt &quot;Sans Serif&quot;;
 	color: #fff;
 }
-QPushButton#GetAccountPushButton:pressed {
+QPushButton#ReturnLoginButton:pressed {
 	box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
 	outline: 0;
 	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #4F5B76, stop: 1 #363D52);
@@ -197,6 +197,35 @@ QPushButton#GetAccountPushButton:pressed {
      <width>191</width>
      <height>31</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="ReturnLoginLabel">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>490</y>
+     <width>171</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Return to Login Page</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ReturnLoginButton">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>500</y>
+     <width>111</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>LOGIN PAGE</string>
    </property>
   </widget>
  </widget>
